# zephyr-course

./: README.md  west.yml
app/: CMakeLists.txt  app.overlay  esp32_led.overlay  kconfig  prj.conf
app/boards/: esp32_devkitc_esp32_procpu.overlay
app/boards/imbox/: Kconfig  Kconfig.imbox  board.c  board.yml  imbox-pinctrl.dtsi  imbox.dts  imbox.yaml  imbox_defconfig
app/boards/imbox_board/: Kconfig  Kconfig.imbox_board  board.yml  imbox_board_appcpu.yaml  imbox_board_procpu.yaml
app/drivers/our_driver/: CMakeLists.txt  Kconfig  our_driver.c  our_driver.h  our_driver_shell.c
app/src/: main.cpp
dts/bindings/: our,driver.yaml
